account_streamline 1.18
~~~~~~~~~~~~~~~~~~~~~~~

- [TKT/2015/01477] Fixes to bugs when posting a customer payment

account_streamline 1.14
~~~~~~~~~~~~~~~~~~~~~~~

- [TKT/2014/00961] Fixed group for button cancel

account_streamline 1.13
~~~~~~~~~~~~~~~~~~~~~~~

- [TKT/2014/00429] Differentiate payable payment and receivable payment selections
- [TKT/2014/00429] Add filters credit/debit on customer payment menu
- [TKT/2014/00429] Allow debits and receivable in mark as good to pay wizard
- [TKT/2014/00429] Fixed the type of the generated payment selection as the account can be receivable now

account_streamline 1.12.1
~~~~~~~~~~~~~~~~~~~~~~~~~

- [TKT/2014/00319] Added check unicity check on (account.move ref field, account.move.line partner_id field)
- [CONFIG] The above check can be disabled by company (in Configuration>Configuration>Accounting)

account_streamline 1.12

- Payment suggestion: Remove an invalid address block (payment suggestions can be generated for multiple partners) 
- Removed references to advanced filter

account_streamline 1.11.2

- [TKT/2014/01154] [i18n] Fixed move_state related field to use translation as selection

account_streamline 1.11.1

- Fix remittance letter totals.

account_streamline 1.11

Production release

account_streamline 1.10.6

- [i18n] Make remittance letter attachment name translatable.

account_streamline 1.10.5

- TKT/2014/00681: Improvment of payment suggestion template.

account_streamline 1.9.3.2 (merged in 1.10.3)

- TKT/2014/01029 - Fix account display (also used in balance) by reusing fix from an openerp branch on bazaar

account_streamline 1.10.2

- Bring back button_cancel to its default behaviour

account_streamline 1.10.1

- Add adressleft in remittance letter.
- Improve tables and total in remittance letter.
- Address display is now in bold

account_streamline 1.10

Production release

account_streamline 1.9.4

- Deteled is_active account_journal (was not used)

account_streamline 1.9.3
