@@ -1,3 +1,9 @@
+next
+~~~~
+
+* [TKT/2015/01627] Menu command to post multiple accounting entries at once.
+
+
 account_streamline 1.18
 ~~~~~~~~~~~~~~~~~~~~~~~
 
